# janken-automation-chatgpt

./: README.md  pyproject.toml
src/: app.py  game_controller.py
src/static/: main.js
